--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
+/* Estilos gerais */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Estilos para desktop */
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 2em;
+    text-align: center;
+  }
+  h4 {
+    font-size: 1.5em;
+    text-decoration: underline;
+  }
+  p {
+    font-size: 1.1em;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Estilos para celular */
+@media screen and (max-width: 767px) {
+  h2 {
+    font-size: 1.5em;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  h4 {
+    font-size: 1.2em;
+    text-decoration: underline;
+  }
+  p {
+    font-size: 1em;
   }
 }
